--- a/settings.cfg
+++ b/settings.cfg
@@ -4,9 +4,27 @@ consumer_secret: 'XXXXXXXXXXXXXXXXXXXXXX'
 access_token_key: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
 access_token_secret: 'XXXXXXXXXXXXXXXXXXXXXXXXXXX'
 
+# Reddit (PRAWN) tokens: create script based app at reddit
+reddit_client_id: '9n0_hhPIgEcbaQ'
+reddit_client_secret: '5NcdhKG7Tf4LnJPeEhJUhNmv4yk'
+reddit_password: 'AJRrXDJn8XU1IMPGWtXZ'
+reddit_user_agent: 'SuraHeinz'
+reddit_username: 'tschul'
+reddit_subreddit: 'all'
+reddit_query: 'cow'
+
 # Logging
 log_file: 'logging.log'
 log_level: 'DEBUG' # INFO
 log_time: 'asctime'
 
-# https://grahamnic.wordpress.com/2013/09/15/python-using-the-twitter-api-to-datamine/
+# Timing and odds
+cycle_wait_time: 900                    # max wait time in seconds (min 0.8)
+follow_back_step: 7                     # nth cycle where follow back is performed
+
+retweet_from_trends: 5                  # nth cylcle where random trends are retweeted
+retweet_from_trends_prob_retweet: 0.5   # prob tweet is retweeted in trends
+retweet_from_trends_prob_fav: 0.8       # prob tweet is faved in trends
+
+reddit_search_and_pick: 3
+
