--- a/settings.cfg
+++ b/settings.cfg
@@ -5,22 +5,22 @@ access_token_key: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
 access_token_secret: 'XXXXXXXXXXXXXXXXXXXXXXXXXXX'
 
 # Reddit (PRAWN) tokens: create script based app at reddit
-reddit_client_id: '9n0_hhPIgEcbaQ'
-reddit_client_secret: '5NcdhKG7Tf4LnJPeEhJUhNmv4yk'
-reddit_password: 'AJRrXDJn8XU1IMPGWtXZ'
-reddit_user_agent: 'SuraHeinz'
-reddit_username: 'tschul'
+reddit_client_id: 'XXXXXXXXXXX'
+reddit_client_secret: 'XXXXXXXXXXX'
+reddit_password: 'XXXXXXXXXXXXXXXXXXXXXX'
+reddit_user_agent: 'XXXXXXXXXXXXXXXXX'
+reddit_username: 'XXXXX'
 reddit_subreddit: 'all'
 reddit_query: 'cow'
 
 # Logging
-log_file: 'logging.log'
 log_level: 'DEBUG' # INFO
 log_time: 'asctime'
 
 # Timing and odds
 cycle_wait_time: 900                    # max wait time in seconds (min 0.8)
 follow_back_step: 7                     # nth cycle where follow back is performed
+unfollow_step: 25                       # nth cycle where non followers are unfollowed
 
 retweet_from_trends: 5                  # nth cylcle where random trends are retweeted
 retweet_from_trends_prob_retweet: 0.5   # prob tweet is retweeted in trends
