reddit tweet from trends

--- a/settings.cfg
+++ b/settings.cfg
@@ -10,21 +10,30 @@ reddit_client_secret: 'XXXXXXXXXXX'
 reddit_password: 'XXXXXXXXXXXXXXXXXXXXXX'
 reddit_user_agent: 'XXXXXXXXXXXXXXXXX'
 reddit_username: 'XXXXX'
-reddit_subreddit: 'all'
-reddit_query: 'cow'
+
 
 # Logging
-log_level: 'DEBUG' # INFO
+log_level: 'DEBUG' #INFO
 log_time: 'asctime'
 
 # Timing and odds
-cycle_wait_time: 900                    # max wait time in seconds (min 0.8)
-follow_back_step: 7                     # nth cycle where follow back is performed
-unfollow_step: 25                       # nth cycle where non followers are unfollowed
+cycle_wait_time: 4000                    # max wait time in seconds (min 0.8)
+follow_back_step: 2                      # nth cycle where follow back is performed
+unfollow_step: 10                        # nth cycle where non followers are unfollowed
 
-retweet_from_trends: 5                  # nth cylcle where random trends are retweeted
-retweet_from_trends_prob_retweet: 0.5   # prob tweet is retweeted in trends
-retweet_from_trends_prob_fav: 0.8       # prob tweet is faved in trends
+retweet_from_trends: 5                   # nth cylcle where random trends are retweeted
+retweet_from_trends_prob_retweet: 0.5    # prob tweet is retweeted in trends
+retweet_from_trends_prob_fav: 0.8        # prob tweet is faved in trends
 
-reddit_search_and_pick: 3
+reddit_search_and_pick: 6
+
+tweet_reddit_based_on_trends: 2          # nth cycle to tweet a random reddit based on trends
+
+# trends
+trend_location: 638242          # Germany
+
+# reddit
+reddit_subreddit: 'pics'
+reddit_query: 'pup OR cow OR kit OR alpaca'
+
 
