find bitchy friends

--- a/settings.cfg
+++ b/settings.cfg
@@ -20,6 +20,7 @@ log_time: 'asctime'
 cycle_wait_time: 4000                    # max wait time in seconds (min 0.8)
 follow_back_step: 2                      # nth cycle where follow back is performed
 unfollow_step: 10                        # nth cycle where non followers are unfollowed
+find_friend_on_trends: 1                 # nth cycle where we follow somone volatile
 
 retweet_from_trends: 5                   # nth cylcle where random trends are retweeted
 retweet_from_trends_prob_retweet: 0.5    # prob tweet is retweeted in trends
