--- a/settings/settings.cfg
+++ b/settings/settings.cfg
@@ -1,21 +1,3 @@
-# Twitter tokens
-consumer_key: 'XXXXXXXXXXXXXXXX'
-consumer_secret: 'XXXXXXXXXXXXXXXXXXXXXX'
-access_token_key: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
-access_token_secret: 'XXXXXXXXXXXXXXXXXXXXXXXXXXX'
-
-# Reddit (PRAWN) tokens: create script based app at reddit
-reddit_client_id: 'XXXXXXXXXXX'
-reddit_client_secret: 'XXXXXXXXXXX'
-reddit_password: 'XXXXXXXXXXXXXXXXXXXXXX'
-reddit_user_agent: 'XXXXXXXXXXXXXXXXX'
-reddit_username: 'XXXXX'
-
-
-# Logging
-log_level: 'DEBUG' #INFO
-log_time: 'asctime'
-
 # Timing and odds
 cycle_wait_time: 4000                    # max wait time in seconds (min 0.8)
 follow_back_step: 2                      # nth cycle where follow back is performed
@@ -37,4 +19,20 @@ trend_location: 638242          # Germany
 reddit_subreddit: 'pics'
 reddit_query: 'pup OR cow OR kit OR alpaca'
 
+# Logging
+log_level: 'DEBUG' #INFO
+log_time: 'asctime'
+
+## Twitter tokens
+# consumer_key: 'XXXXXXXXXXXXXXXXXXXXXXXXX'
+# consumer_secret: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
+# access_token_key: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
+# access_token_secret: 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX'
+
+# Reddit (PRAWN) tokens: create script based app at reddit
+# reddit_client_id: 'XXXXXXXXXXXXXX'
+# reddit_client_secret: 'XXXXXXXXXXXXXXXXXXXXXXXXXXX'
+# reddit_password: 'XXXXXXXXXXXXXXXXXXXXX'
+# reddit_user_agent: 'XXXXXXXXX'
+# reddit_username: 'XXXXX'
 
