refactoring towards compostionality

--- a/settings/settings.cfg
+++ b/settings/settings.cfg
@@ -22,6 +22,7 @@ reddit_query: 'pup OR cow OR kit OR alpaca'
 # Logging
 log_level: 'DEBUG' #INFO
 log_time: 'asctime'
+log_file: ''
 
 ## Twitter tokens
 # consumer_key: 'XXXXXXXXXXXXXXXXXXXXXXXXX'
