add woeid to settings

--- a/settings/settings.cfg
+++ b/settings/settings.cfg
@@ -13,7 +13,7 @@ reddit_search_and_pick: 6
 tweet_reddit_based_on_trends: 2          # nth cycle to tweet a random reddit based on trends
 
 # trends
-trend_location: 638242          # Germany
+trend_location: 638242          # Germany :woeid
 
 # reddit
 reddit_subreddit: 'pics'
